--- a/references.bib
+++ b/references.bib
@@ -257,3 +257,306 @@
 	pages = {345--359},
 	file = {ScienceDirect Snapshot:C\:\\Users\\danny\\Zotero\\storage\\CQIUPCTA\\S1040618209002365.html:text/html},
 }
+
+@article{pares_new_2013,
+	title = {New views on an old move: {Hominin} migration into {Eurasia}},
+	volume = {295},
+	copyright = {https://www.elsevier.com/tdm/userlicense/1.0/},
+	issn = {10406182},
+	shorttitle = {New views on an old move},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S1040618211007014},
+	doi = {10.1016/j.quaint.2011.12.015},
+	abstract = {Current knowledge of hominin migration into Eurasia is severely biased by poor age constraints at many Lower Pleistocene sites. This contribution analyzes the current status of the chronology for the most important sites in the Circum-Mediterranean region, with an emphasis on those sites for which the archaeological remains (fossils and/or artifacts) are found in an unambiguous stratigraphic context. Taken together, current data shows an apparent occupation window of between 0.9 and 1.8 Ma for the bulk of Lower Paleolithic Sites in Western Eurasia. Noticeably, the oldest known sites, Dmanisi and Atapuerca TE9 (1.8 and 1.2 Ma respectively), are among the most geographically disparate sites in Eurasia. The time gap between these sites could be an artifact of the incomplete archaeological record, but it might also relate to distinct pulses of hominin migration into Eurasia. The uncertainty in existing ages prevents ascertaining whether the main climatic events in the Plio-Pleistocene match migration pulses of human dispersal into Eurasia.},
+	language = {en},
+	urldate = {2026-02-10},
+	journal = {Quaternary International},
+	author = {Parés, J.M. and Duval, M. and Arnold, L.J.},
+	month = may,
+	year = {2013},
+	pages = {5--12},
+	file = {Parés et al. - 2013 - New views on an old move Hominin migration into E.pdf:C\:\\Users\\danny\\Zotero\\storage\\A9RXFFU5\\Parés et al. - 2013 - New views on an old move Hominin migration into E.pdf:application/pdf},
+}
+
+@article{parfitt_early_2010,
+	title = {Early {Pleistocene} human occupation at the edge of the boreal zone in northwest {Europe}},
+	url = {https://sci-hub.ru/10.1038/nature09117},
+	doi = {10.1038/nature09117},
+	urldate = {2026-02-10},
+	journal = {Nature},
+	author = {Parfitt, Simon A. and Ashton, Nick M. and Lewis, Simon G. and Abel, Richard L. and Et., Al},
+	year = {2010},
+}
+
+@article{garba_east--west_2024,
+	title = {East-to-west human dispersal into {Europe} 1.4 million years ago},
+	volume = {627},
+	issn = {0028-0836, 1476-4687},
+	url = {https://www.nature.com/articles/s41586-024-07151-3},
+	doi = {10.1038/s41586-024-07151-3},
+	language = {en},
+	number = {8005},
+	urldate = {2026-02-10},
+	journal = {Nature},
+	author = {Garba, R. and Usyk, V. and Ylä-Mella, L. and Kameník, J. and Stübner, K. and Lachner, J. and Rugel, G. and Veselovský, F. and Gerasimenko, N. and Herries, A. I. R. and Kučera, J. and Knudsen, M. F. and Jansen, J. D.},
+	month = mar,
+	year = {2024},
+	pages = {805--810},
+	file = {Garba et al. - 2024 - East-to-west human dispersal into Europe 1.4 milli.pdf:C\:\\Users\\danny\\Zotero\\storage\\QECZGBQ8\\Garba et al. - 2024 - East-to-west human dispersal into Europe 1.4 milli.pdf:application/pdf},
+}
+
+@article{carpentieri_for_2022,
+	title = {For {Our} {World} {Without} {Sound}: the {Opportunistic} {Debitage} in the {Italian} {Context}—a {Methodological} {Evaluation} of the {Lithic} {Assemblages} of {Pirro} {Nord}, {Cà} {Belvedere} di {Montepoggiolo}, {Ciota} {Ciara} {Cave} and {Riparo} {Tagliente}},
+	volume = {5},
+	issn = {2520-8217},
+	shorttitle = {For {Our} {World} {Without} {Sound}},
+	url = {https://doi.org/10.1007/s41982-022-00117-9},
+	doi = {10.1007/s41982-022-00117-9},
+	abstract = {The informative potential taken on by lithic artefacts has increased over the years. They gradually grew into proxies to detect the most relevant features of human material culture, including cognitive abilities to realise stone tools or, in other words, to track down the delineation of behavioural complexity. Consequently, notions like predetermination, standardisation (morphologically likewise) and hierarchisation have been intensely used in lithic technology as markers of such complexity, leading to ruling out contexts lacking any trace of these traits. Within the present state of the art, the use of the terms expedient and opportunism has characterised, in a negative way, the dichotomy between complex and simple within prehistoric contexts. Even if a requalification of expedient technologies has been recently observed, opportunistic behaviours still connote the complete absence of planning and complexity (even in terms of the mental scheme) within lithic industries. This background often prevented a consideration as relevant, from a technological and methodological perspective, these assemblages, primarily when Lower Palaeolithic contexts were addressed. With the definition and use of the term opportunistic debitage, this work questions the possible methodological implications of assemblages known as complexity- and planning-free and that can be found throughout different chronological and cultural phases.},
+	language = {en},
+	number = {1},
+	urldate = {2026-02-10},
+	journal = {Journal of Paleolithic Archaeology},
+	author = {Carpentieri, Marco and Arzarello, Marta},
+	month = sep,
+	year = {2022},
+	keywords = {Core technology, Lithic technology, Lower Pleistocene, Middle Pleistocene, Palaeolithic},
+	pages = {12},
+	file = {Full Text PDF:C\:\\Users\\danny\\Zotero\\storage\\W7PES84H\\Carpentieri and Arzarello - 2022 - For Our World Without Sound the Opportunistic Deb.pdf:application/pdf},
+}
+
+@article{muttoni_first_2011,
+	title = {First dated human occupation of {Italy} at {\textasciitilde} 0.85   {Ma} during the late {Early} {Pleistocene} climate transition},
+	volume = {307},
+	issn = {0012-821X},
+	url = {https://www.sciencedirect.com/science/article/pii/S0012821X11003086},
+	doi = {10.1016/j.epsl.2011.05.025},
+	abstract = {A candidate for the oldest human occupation site in Italy is Monte Poggiolo where the lithic tool-bearing levels are currently dated to {\textasciitilde}1Ma based on electron spin resonance (ESR). The low analytical precision of ±30\% at 2σ makes it unclear whether the date actually conflicts with a recent reassessment of age constraints on key hominin sites from Italy, France, and Spain pointing to a uniformly young timing for the earliest habitation of southern Europe during the late Early Pleistocene climate transition within reverse magnetic polarity subchron C1r.1r (0.988–0.781Ma). Our new magnetostratigraphic and biostratigraphic results show a sequence of stable normal and reverse polarities in a regional lithostratigraphic context that indicate the Monte Poggiolo tool-bearing site post-dates the Jaramillo normal polarity subchron, most probably occurring at {\textasciitilde}0.85Ma immediately after the pronounced cooling that culminated with marine isotope stage 22 when the associated regression may have opened new migration routes through the Po Valley for large mammals and hominins.},
+	number = {3},
+	urldate = {2026-02-10},
+	journal = {Earth and Planetary Science Letters},
+	author = {Muttoni, Giovanni and Scardia, Giancarlo and Kent, Dennis V. and Morsiani, Enrico and Tremolada, Fabrizio and Cremaschi, Mauro and Peretto, Carlo},
+	month = jul,
+	year = {2011},
+	keywords = {hominins, Italy, magnetostratigraphy, Monte Poggiolo, nannofossil biostratigraphy, Pleistocene climate},
+	pages = {241--252},
+	file = {Full Text:C\:\\Users\\danny\\Zotero\\storage\\U8XRTEGJ\\Muttoni et al. - 2011 - First dated human occupation of Italy at ~   0.85 .pdf:application/pdf;ScienceDirect Snapshot:C\:\\Users\\danny\\Zotero\\storage\\CM74DKX5\\S0012821X11003086.html:text/html},
+}
+
+@article{ferring_early_2022,
+	title = {Early {Pleistocene} stratigraphy, sedimentary environments, and formation contexts at {Dmanisi} in the {Georgian} {Caucasus}},
+	volume = {172},
+	issn = {1095-8606},
+	doi = {10.1016/j.jhevol.2022.103254},
+	abstract = {The Early Pleistocene site of Dmanisi is now well known for its large number of fossils of early Homo erectus as well as associated artifacts and faunal remains, recovered mainly in pipe-related geologic features. Testing in the M5 unit 100 m to the west of the main excavations revealed a thick stratigraphy with no evidence of pipes or gullies, indicating that the geologic record at Dmanisi included spatially distinct sedimentary environments that needed further investigation. Here we report the results of a geoarchaeological program to collect data bearing on contexts and formation processes over a large area of the promontory. That work has defined over 40,000 m2 of in situ deposits with artifacts and faunas. Stratum A ashes bury the uppermost Mashavera Basalt, which we have dated to 1.8 Ma in the M5 block. The Stratum A deposits contain stratified occupations that accumulated quickly and offer good potential for recovery of in situ materials. Stratum B1 deposits above the A/B unconformity include all of the pipe and gully facies at Dmanisi, reflecting a brief but very intense phase of geomorphic change. Those deposits contain the majority of faunas and all of the hominin fossils. B1 slope facies offer excellent formation contexts away from the piped area, and all B1 deposits are sealed by Stratum B2 over the whole promontory. Strata B2 to B5 register a return to slope facies, with no further evidence of pipes or gullies. Those deposits also present excellent contexts for recovery of in situ occupations. Overall, Dmanisi's geologic history preserves an exceptional record of the activities and environmental context of occupations during the first colonization of Eurasia.},
+	language = {eng},
+	journal = {Journal of Human Evolution},
+	author = {Ferring, Reid and Oms, Oriol and Nomade, Sebastien and Humphrey, John D. and Tappen, Martha and Coil, Reed and Shelia, Teona and Crislip, Peter and Chagelishvili, Rusudan and Kiladze, Gocha and Guillou, Hervé and Lordkipanidze, David},
+	month = nov,
+	year = {2022},
+	pmid = {36116183},
+	keywords = {Animals, Caucasus, Dmanisi, Early Pleistocene, Eurasian Lower Paleolithic, Facies, Fossils, Geoarchaeology, Geology, Hominidae, Site formation},
+	pages = {103254},
+	file = {Full Text:C\:\\Users\\danny\\Zotero\\storage\\6S2ASH37\\Ferring et al. - 2022 - Early Pleistocene stratigraphy, sedimentary enviro.pdf:application/pdf},
+}
+
+@article{ferring_earliest_2011,
+	title = {Earliest human occupations at {Dmanisi} ({Georgian} {Caucasus}) dated to 1.85–1.78 {Ma}},
+	url = {https://sci-hub.ru/10.1073/pnas.1106638108},
+	doi = {10.1073/pnas.1106638108},
+	urldate = {2026-02-10},
+	journal = {Proceedings of the National Academy of Sciences},
+	author = {Ferring, Reid and Oms, Oriol and Agustí, Jordi and Berna, Francesco and Et., Al},
+	year = {2011},
+	file = {Full Text:C\:\\Users\\danny\\Zotero\\storage\\MQ44NAV4\\Ferring et al. - 2011 - Earliest human occupations at Dmanisi (Georgian Ca.pdf:application/pdf},
+}
+
+@article{gabunia_earliest_2000,
+	title = {Earliest {Pleistocene} {Hominid} {Cranial} {Remains} from {Dmanisi}, {Republic} of {Georgia}: {Taxonomy}, {Geological} {Setting}, and {Age}},
+	shorttitle = {Earliest {Pleistocene} {Hominid} {Cranial} {Remains} from {Dmanisi}, {Republic} of {Georgia}},
+	url = {https://sci-hub.ru/10.1126/science.288.5468.1019},
+	doi = {10.1126/science.288.5468.1019},
+	urldate = {2026-02-10},
+	journal = {Science},
+	author = {Gabunia, Leo and Vekua, Abesalom and Lordkipanidze, David and Swisher, Carl C. and Et., Al},
+	year = {2000},
+}
+
+@article{de_lumley_industries_2005,
+	title = {Les industries lithiques préoldowayennes du début du {Pléistocène} inférieur du site de {Dmanissi} en {Géorgie}},
+	url = {https://sci-hub.ru/10.1016/j.anthro.2005.02.011},
+	doi = {10.1016/j.anthro.2005.02.011},
+	urldate = {2026-02-10},
+	journal = {L'Anthropologie},
+	author = {de Lumley, Henry and Nioradzé, Médéa and Barsky, Deborah and Cauche, Dominique and Et., Al},
+	year = {2005},
+}
+
+@article{sablin_faunal_2021,
+	title = {Faunal complex of the {Early} {Pleistocene} {Muhkai} 2 locality},
+	volume = {325},
+	issn = {0206-0477},
+	url = {https://www.zin.ru/journals/trudyzin/eng/publication.html?id=427},
+	doi = {10.31610/trudyzin/2021.325.1.82},
+	abstract = {The Early Pleistocene locality Muhkai 2 was discovered in Central Dagestan, northeastern Caucasus, Russia, in 2006. Archaeological investigations of the site have been directed by Corresponding member of RAS H.A. Amirkhanov (Institute of Archaeology RAS, Moscow). The article presents the results of the study of osteological material from the excavations of 2006–2017. The cultural layers with stone tools and mammal bones are found within stratum of brownish-grey petrified loams with reversed magnetization. We identified 14 large species of mammals, which are indicators for the dating of the faunal assemblage and crucial in identifying the specific characteristics of the natural environment at the time of site formation. Stenon horse and Etruscan wolf dominate the spectrum of species at Muhkai 2. All large mammal species from the site are inhabitants of open and semi-open landscapes and animals indicative of closed biotopes are absent. The biotope appears to have been a dry savannah-steppe with small areas of forest vegetation. The climate at this time was warm and quite arid. Most likely, the animals died here due to natural causes and their carcasses were buried at the bottom of an ancient, slightly saline and shallow, temporary body of water. Data from the theriofauna place the age of the site Muhkai 2 within the chronological range of 2.1–1.77 Mya.},
+	language = {en},
+	number = {1},
+	urldate = {2026-02-10},
+	journal = {Proceedings of the Zoological Institute RAS},
+	author = {Sablin, M.V. and Iltsevich, K.Yu.},
+	month = mar,
+	year = {2021},
+	pages = {82--90},
+	file = {Sablin and Iltsevich - 2021 - Faunal complex of the Early Pleistocene Muhkai 2 l.pdf:C\:\\Users\\danny\\Zotero\\storage\\VTGFA5P6\\Sablin and Iltsevich - 2021 - Faunal complex of the Early Pleistocene Muhkai 2 l.pdf:application/pdf},
+}
+
+@article{ozherelyev_oldowan_2019,
+	title = {The {Oldowan} site of {Muhkai} {II}, layer 80 (northeastern {Caucasus}): {Spatial} structure and cultural and chronological attribution of the lithic assemblage},
+	shorttitle = {The {Oldowan} site of {Muhkai} {II}, layer 80 (northeastern {Caucasus})},
+	url = {https://sci-hub.ru/10.1016/j.anthro.2019.06.002},
+	doi = {10.1016/j.anthro.2019.06.002},
+	urldate = {2026-02-10},
+	journal = {L'Anthropologie},
+	author = {Ozherelyev, D. V.},
+	year = {2019},
+}
+
+@article{rausch_integrated_2019,
+	title = {An integrated reconstruction of the early {Pleistocene} palaeoenvironment of {Homo} erectus in the {Denizli} {Basin} ({SW} {Turkey})},
+	url = {https://sci-hub.ru/10.1016/j.geobios.2019.10.003},
+	doi = {10.1016/j.geobios.2019.10.003},
+	urldate = {2026-02-10},
+	journal = {Geobios},
+	author = {Rausch, Lea and Alçiçek, Hülya and Vialet, Amélie and Boulbes, Nicolas and Et., Al},
+	year = {2019},
+	file = {Submitted Version:C\:\\Users\\danny\\Zotero\\storage\\YWXIY2S7\\Rausch et al. - 2019 - An integrated reconstruction of the early Pleistoc.pdf:application/pdf},
+}
+
+@article{mori_virtual_2024,
+	title = {Virtual reconstruction and geometric morphometric analysis of the {Kocabaş} hominin fossil from {Turkey}: {Implications} for taxonomy and evolutionary significance},
+	volume = {191},
+	issn = {1095-8606},
+	shorttitle = {Virtual reconstruction and geometric morphometric analysis of the {Kocabaş} hominin fossil from {Turkey}},
+	doi = {10.1016/j.jhevol.2024.103517},
+	abstract = {The Kocabaş specimen comes from a travertine quarry near the homonymous village in the Denizli basin (Turkey). The specimen comprises three main fragments: portions of the right and left parietal and left and right parts of the frontal bone. The fossil was assumed to belong to the Homo erectus s.l. hypodigm by some authors, whereas others see similarities with Middle Pleistocene fossils (Broken Hill 1/Kabwe, Bodo, or Ceprano). Here, we present the first attempt to make a complete reconstruction of the missing medial portion of the frontal bone and a comprehensive geometric morphometric analysis of this bone. We restored the calotte by aligning and mirroring the three preserved fragments. Afterward, we restored the missing portion by applying the thin-plate spline interpolation algorithm of target fossils onto the reconstructed Kocabaş specimen. For the geometric morphometric analyses, we collected 80 landmarks on the frontal bone (11 osteometric points, 14 bilateral curve semilandmarks, and 41 surface semilandmarks). The comparative sample includes 21 fossils from different chronological periods and geographical areas and 30 adult modern humans from different populations. Shape analyses highlighted the presence in Kocabaş of features usually related to Middle Pleistocene Homo, such as a developed supraorbital torus associated with a relatively short frontal squama and reduced post-toral sulcus. Cluster analysis and linear discriminant analysis classification procedure suggest Kocabaş being part of the same taxonomic unit of Eurasian and African Middle Pleistocene Homo. In light of our results, we consider that attributing the Kocabaş hominin to H. erectus s.l. may be unwarranted. Results of our analyses are compatible with different evolutionary scenarios, but a more precise chronological framework is needed for a thorough discussion of the evolutionary significance of this specimen. Future work should clarify its geological age, given uncertainties regarding its stratigraphic provenance.},
+	language = {eng},
+	journal = {Journal of Human Evolution},
+	author = {Mori, Tommaso and Riga, Alessandro and Aytek, Ahmet Ihsan and Harvati, Katerina},
+	month = jun,
+	year = {2024},
+	pmid = {38781712},
+	keywords = {Animals, Ballik travertine, Biological Evolution, Early Pleistocene, Eastern Mediterranean, Fossils, Frontal Bone, Hominidae, Middle Pleistocene, Turkey, Virtual anthropology},
+	pages = {103517},
+}
+
+@article{vialet_kocabas_2018,
+	title = {The {Kocabaş} hominin ({Denizli} {Basin}, {Turkey}) at the crossroads of {Eurasia}: {New} insights from morphometric and cladistic analyses},
+	shorttitle = {The {Kocabaş} hominin ({Denizli} {Basin}, {Turkey}) at the crossroads of {Eurasia}},
+	url = {https://sci-hub.ru/10.1016/j.crpv.2017.11.003},
+	doi = {10.1016/j.crpv.2017.11.003},
+	urldate = {2026-02-10},
+	journal = {Comptes Rendus Palevol},
+	author = {Vialet, Amélie and Prat, Sandrine and Wils, Patricia and Cihat Alçiçek, Mehmet},
+	year = {2018},
+	file = {Full Text:C\:\\Users\\danny\\Zotero\\storage\\FDMTVZ32\\Vialet et al. - 2018 - The Kocabaş hominin (Denizli Basin, Turkey) at the.pdf:application/pdf},
+}
+
+@article{maddy_earliest_2015,
+	title = {The earliest securely-dated hominin artefact in {Anatolia}?},
+	volume = {109},
+	issn = {0277-3791},
+	url = {https://www.sciencedirect.com/science/article/pii/S0277379114004818},
+	doi = {10.1016/j.quascirev.2014.11.021},
+	abstract = {Anatolia lies at the gateway from Asia into Europe and has frequently been favoured as a route for Early Pleistocene hominin dispersal. Although early hominins are known to have occupied Turkey, with numerous finds of Lower Palaeolithic artefacts documented, the chronology of their dispersal has little reliable stratigraphical or geochronological constraint, sites are rare, and the region's hominin history remains poorly understood as a result. Here, we present a Palaeolithic artefact, a hard-hammer flake, from fluvial sediments associated with the Early Pleistocene Gediz River of Western Turkey. This previously documented buried river terrace sequence provides a clear stratigraphical context for the find and affords opportunities for independent age estimation using the numerous basaltic lava flows that emanated from nearby volcanic necks and aperiodically encroached onto the contemporary valley floors. New 40Ar/39Ar age estimates from these flows are reported here which, together with palaeomagnetic measurements, allow a tightly-constrained chronology for the artefact-bearing sediments to be established. These results suggest that hominin occupation of the valley occurred within a time period spanning ∼1.24 Ma to ∼1.17 Ma, making this the earliest, securely-dated, record of hominin occupation in Anatolia.},
+	urldate = {2026-02-10},
+	journal = {Quaternary Science Reviews},
+	author = {Maddy, D. and Schreve, D. and Demir, T. and Veldkamp, A. and Wijbrans, J. R. and van Gorp, W. and van Hinsbergen, D. J. J. and Dekkers, M. J. and Scaife, R. and Schoorl, J. M. and Stemerdink, C. and van der Schriek, T.},
+	month = feb,
+	year = {2015},
+	keywords = {Hominin occupation, Quaternary, River terraces, Turkey},
+	pages = {68--75},
+	file = {Full Text:C\:\\Users\\danny\\Zotero\\storage\\994T3R5H\\Maddy et al. - 2015 - The earliest securely-dated hominin artefact in An.pdf:application/pdf;ScienceDirect Snapshot:C\:\\Users\\danny\\Zotero\\storage\\IQJMZSDD\\S0277379114004818.html:text/html},
+}
+
+@article{lozano-fernandez_new_2019,
+	title = {New clues about the late {Early} {Pleistocene} peopling of western {Europe}: {Small} vertebrates from {The} {Bois}-de-{Riquet} archeo-paleontological site ({Lézignan}-{La}-{Cèbe}, southern {France})},
+	volume = {219},
+	issn = {0277-3791},
+	shorttitle = {New clues about the late {Early} {Pleistocene} peopling of western {Europe}},
+	url = {https://www.sciencedirect.com/science/article/pii/S0277379119300526},
+	doi = {10.1016/j.quascirev.2019.07.015},
+	abstract = {The different archeostratigraphic units of the Bois-de-Riquet site (Lézignan-la-Cèbe, southern France) have yielded a range of stone tools in association with rich large-mammal assemblages. The oldest stone tools are from archeostratigraphic unit US2, which was initially dated to {\textless}1.57 Ma and with later, more detailed dating assigned to the interval between 1.4 and 1.1 Ma. This paper presents results from all small vertebrate fossil remains recovered from US2. The faunal list now comprises the arvicolines Allophaiomys nutiensis, Mimomys savini, Stenocranius gregaloides, Iberomys huescarensis and Terricola arvalidens, the murids Apodemus sylvaticus and Castillomys rivas, the hamster Allocricetus bursae, the toad Epidalea calamita, the snake Vipera sp. and an indeterminanble lizard (Lacertidae indet.). Based on the chronological ranges known to date, the arvicolinae species indicate that the age of US2 is between 1 and 0.9 Ma. This places this site among the southern European localities associated with the first arrivals of hominins in Europe, like Sierra de Atapuerca (Spain), Barranco León D and Fuente Nueva 3 (Spain), Cueva Negra del Estrecho del Río Quípar (Spain), Barranc de la Boella (Spain), Vallaparadis (Spain), Le Vallonnet (France) and Pirro Nord (Italy). The fauna analysis allows us to reconstruct the paleoenvironment of the area surrounding the site during its formation and shows a dominance of open and humid meadow landscape, with scarce areas of humid forest, and woodland margin relatively far from the water’s edge.},
+	urldate = {2026-02-10},
+	journal = {Quaternary Science Reviews},
+	author = {Lozano-Fernández, I. and Blain, H. -A. and Agustí, J. and Piñero, P. and Barsky, D. and Ivorra, J. and Bourguignon, L.},
+	month = sep,
+	year = {2019},
+	keywords = {Acheulian, Biochronology, First hominins in Europe, Late early pleistocene, Paleoenviroment, Small vertebrates},
+	pages = {187--203},
+	file = {ScienceDirect Snapshot:C\:\\Users\\danny\\Zotero\\storage\\D9VAFR5A\\S0277379119300526.html:text/html},
+}
+
+@article{bourguignon_bois--riquet_2016,
+	title = {Bois-de-{Riquet} ({Lézignan}-la-{Cèbe}, {Hérault}): {A} late {Early} {Pleistocene} archeological occurrence in southern {France}},
+	shorttitle = {Bois-de-{Riquet} ({Lézignan}-la-{Cèbe}, {Hérault})},
+	url = {https://sci-hub.ru/10.1016/j.quaint.2015.06.037},
+	doi = {10.1016/j.quaint.2015.06.037},
+	urldate = {2026-02-10},
+	journal = {Quaternary International},
+	author = {Bourguignon, Laurence and Crochet, Jean-Yves and Capdevila, Ramon and Ivorra, Jérôme and Et., Al},
+	year = {2016},
+}
+
+@article{lozano-fernandez_biochronological_2014,
+	title = {Biochronological data inferred from the {Early} {Pleistocene} small mammals of the {Barranc} de la {Boella} site ({Tarragona}, north-eastern {Spain})},
+	volume = {29},
+	copyright = {Copyright © 2014 John Wiley \& Sons, Ltd.},
+	issn = {1099-1417},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/jqs.2744},
+	doi = {10.1002/jqs.2744},
+	abstract = {In 2007, remains of Mammuthus meridionalis and 334 lithic artefacts were recovered in level 2 of Barranc de la Boella. The presence of M. meridionalis allows us to assign an age older than 700 ka to this level, which represents one of the few sites of this age with palaeontological remains associated with lithic industry. It also enables us to shed light on questions pertaining to the chronology and the biogeography of the earliest European human settlements. In this paper, the small mammals from the Barranc de la Boella site are described for the first time, with special emphasis on the arvicolines. The presence of Victoriamys chalinei and Mimomys savini allows us to estimate the age of level 2. Level 2 of the Barranc de la Boella site ranges between the top of the Jaramillo subchron (0.99 Ma) and shortly after the Brunhes–Matuyama transition at 0.78 Ma, thus covering a time span of great importance for our knowledge of the earliest human occupations in Western Europe.},
+	language = {en},
+	number = {7},
+	urldate = {2026-02-10},
+	journal = {Journal of Quaternary Science},
+	author = {Lozano-Fernández, Iván and Bañuls-Cardona, Sandra and Blain, Hugues-Alexandre and López-García, Juan Manuel and Vallverdú, Josep and Agustí, Jordi and Cuenca-Bescós, Gloria},
+	year = {2014},
+	note = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/jqs.2744},
+	keywords = {Barranc de la Boella, biochronology, early Pleistocene, NE Iberian Peninsula, small mammals},
+	pages = {722--728},
+	file = {Snapshot:C\:\\Users\\danny\\Zotero\\storage\\6EIKUHKC\\jqs.html:text/html},
+}
+
+@article{mosquera_early_2016,
+	title = {The {Early} {Acheulean} technology of {Barranc} de la {Boella} ({Catalonia}, {Spain})},
+	url = {https://sci-hub.ru/10.1016/j.quaint.2015.05.005},
+	doi = {10.1016/j.quaint.2015.05.005},
+	urldate = {2026-02-11},
+	journal = {Quaternary International},
+	author = {Mosquera, M. and Ollé, A. and Saladié, P. and Cáceres, I. and Et., Al},
+	year = {2016},
+	file = {Full Text:C\:\\Users\\danny\\Zotero\\storage\\C65WU38R\\Mosquera et al. - 2016 - The Early Acheulean technology of Barranc de la Bo.pdf:application/pdf},
+}
+
+@article{walker_cueva_2022,
+	title = {Cueva {Negra} del {Estrecho} del {Río} {Quípar}: {Comings} and goings recorded in a late {Early} ({Lower}) {Pleistocene} microstratigraphical palimpsest},
+	volume = {126},
+	shorttitle = {Cueva {Negra} del {Estrecho} del {Río} {Quípar}},
+	doi = {10.1016/j.anthro.2021.102995},
+	abstract = {Preliminary conclusions from high-resolution microstratigraphical and taphonomical research suggest that Palaeolithic frequentation of the rock-shelter alternated with that of local fauna in the late Early (Lower) Pleistocene.},
+	journal = {L'Anthropologie},
+	author = {Walker, Michael and Haber-Uriarte, María and López-Martínez, Mariano and Linares Matás, Gonzalo and Ruiz, Norman},
+	month = jan,
+	year = {2022},
+	pages = {102995},
+}
+
+@article{walker_cueva_2013,
+	title = {Cueva {Negra} del {Estrecho} del {Río} {Quípar} ({Murcia}, {Spain}): {A} late {Early} {Pleistocene} hominin site with an “{Acheulo}-{Levalloiso}-{Mousteroid}” {Palaeolithic} assemblage},
+	shorttitle = {Cueva {Negra} del {Estrecho} del {Río} {Quípar} ({Murcia}, {Spain})},
+	url = {https://sci-hub.ru/10.1016/j.quaint.2012.04.038},
+	doi = {10.1016/j.quaint.2012.04.038},
+	urldate = {2026-02-11},
+	journal = {Quaternary International},
+	author = {Walker, M. J. and López-Martínez, M. and Carrión-García, J. S. and Rodríguez-Estrella, T. and Et., Al},
+	year = {2013},
+}
